--- a/test/stretch_test.html
+++ b/test/stretch_test.html
@@ -1,33 +1,123 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta name="viewport" content="width=device-width, user-scalable=no">
-		<link type="text/css" rel="stylesheet" href="../src/stretchtext.css">
-		<script defer src="../src/stretchtext.js"></script>
-	</head>
-	<body>
-		<h1>Using epub-type</h1>
-		<p>There once was a <span epub-type="stretchsummary">girl</span><span epub-type="stretchdetail"> Her name was <span epub-type="stretchsummary">Nancy</span><span epub-type="stretchdetail">That was my mother's name.</span> Some stuff at the end</span></p>
-		<p>Most scientists accept <a href="#global-warming-details" epub-type="stretchsummary">global warming</a>.</p>
-		<aside id="global-warming-details" epub-type="stretchdetail">
-			<p>More details on global warming. <a epub-type="stretchsummary" href="#evenmore">More supporting evidence</a></p>
-			<ol id="evenmore" epub-type="stretchdetail">
-				<li>Greater degrees of CO<sub>2</sub></li>
-				<li>Evidence of warming <span epub-type="stretchsummary">trend</span><span epub-type="stretchdetail"> It's the truth -- accept it!</span>.</li>
-			</ol>
-		</aside>
-		<p>This is material at the bottom of the page that will get stretched down.</p>
-
-		<h1>Using CSS Class</h1>
-		<p>There once was a <span class="stretchsummary">girl</span><span class="stretchdetail"> Her name was <span class="stretchsummary">Nancy</span><span class="stretchdetail">That was my mother's name.</span> Some stuff at the end</span></p>
-		<p>Most scientists accept <a href="#global-warming-details3" class="stretchsummary">global warming</a>.</p>
-		<aside id="global-warming-details3" class="stretchdetail">
-			<p>More details on global warming. <a class="stretchsummary" href="#evenmore3">More supporting evidence</a></p>
-			<ol id="evenmore3" class="stretchdetail">
-				<li>Greater degrees of CO<sub>2</sub></li>
-				<li>Evidence of warming <span class="stretchsummary">trend</span><span class="stretchdetail"> It's the truth -- accept it!</span>.</li>
-			</ol>
-		</aside>
-		<p>This is material at the bottom of the page that will get stretched down.</p>
-	</body>
+<html lang="en">
+<head>
+	<title>StretchText Test</title>
+	<meta name="viewport" content="width=device-width">
+	<link type="text/css" rel="stylesheet" href="../src/stretchtext.css">
+	<script type="module" src="../src/main.js"></script>
+</head>
+<body>
+<h1>Using epub-type</h1>
+<p>There once was a <span epub-type="stretchsummary">girl</span><span epub-type="stretchdetail"> Her name was <span
+		epub-type="stretchsummary">Nancy</span><span epub-type="stretchdetail">That was my mother's name.</span> Some stuff at the end</span>
+</p>
+<p>Most scientists accept <a epub-type="stretchsummary" href="#global-warming-details">global warming</a>.</p>
+<aside id="global-warming-details" epub-type="stretchdetail">
+	<p>More details on global warming. <a epub-type="stretchsummary" href="#evenmore">More supporting evidence</a></p>
+	<ol id="evenmore" epub-type="stretchdetail">
+		<li>Greater degrees of CO<sub>2</sub></li>
+		<li>Evidence of warming <span epub-type="stretchsummary">trend</span><span epub-type="stretchdetail"> It's the truth -- accept it!</span>.
+		</li>
+	</ol>
+</aside>
+<p>This is material at the bottom of the page that will get stretched down.</p>
+<h1>Using CSS Class</h1>
+<p>There once was a <span class="stretchsummary">girl</span><span class="stretchdetail"> Her name was <span
+		class="stretchsummary">Nancy</span><span class="stretchdetail">That was my mother's name.</span> Some stuff at the end</span>
+</p>
+<p>Most scientists accept <a href="#global-warming-details3" class="stretchsummary">global warming</a>.</p>
+<aside id="global-warming-details3" class="stretchdetail">
+	<p>More details on global warming. <a class="stretchsummary" href="#evenmore3">More supporting evidence</a></p>
+	<ol id="evenmore3" class="stretchdetail">
+		<li>Greater degrees of CO<sub>2</sub></li>
+		<li>Evidence of warming <span class="stretchsummary">trend</span><span class="stretchdetail"> It's the truth -- accept it!</span>.
+		</li>
+	</ol>
+</aside>
+<p>This is material at the bottom of the page that will get stretched down.</p>
+<h1>Using epub-type</h1>
+<p>There once was a <span epub-type="stretchsummary">girl</span><span epub-type="stretchdetail"> Her name was <span
+		epub-type="stretchsummary">Nancy</span><span epub-type="stretchdetail">That was my mother's name.</span> Some stuff at the end</span>
+</p>
+<p>Most scientists accept <a epub-type="stretchsummary" href="#global-warming-details4">global warming</a>.</p>
+<aside id="global-warming-details4" epub-type="stretchdetail">
+	<p>More details on global warming. <a epub-type="stretchsummary" href="#evenmore4">More supporting evidence</a></p>
+	<ol id="evenmore4" epub-type="stretchdetail">
+		<li>Greater degrees of CO<sub>2</sub></li>
+		<li>Evidence of warming <span epub-type="stretchsummary">trend</span><span epub-type="stretchdetail"> It's the truth -- accept it!</span>.
+		</li>
+	</ol>
+</aside>
+<p>This is material at the bottom of the page that will get stretched down.</p>
+<h1>Using CSS Class</h1>
+<p>There once was a <span class="stretchsummary">girl</span><span class="stretchdetail"> Her name was <span
+		class="stretchsummary">Nancy</span><span class="stretchdetail">That was my mother's name.</span> Some stuff at the end</span>
+</p>
+<p>Most scientists accept <a href="#global-warming-details5" class="stretchsummary">global warming</a>.</p>
+<aside id="global-warming-details5" class="stretchdetail">
+	<p>More details on global warming. <a class="stretchsummary" href="#evenmore5">More supporting evidence</a></p>
+	<ol id="evenmore5" class="stretchdetail">
+		<li>Greater degrees of CO<sub>2</sub></li>
+		<li>Evidence of warming <span class="stretchsummary">trend</span><span class="stretchdetail"> It's the truth -- accept it!</span>.
+		</li>
+	</ol>
+</aside>
+<p>This is material at the bottom of the page that will get stretched down.</p>
+<h1>Using epub-type</h1>
+<p>There once was a <span epub-type="stretchsummary">girl</span><span epub-type="stretchdetail"> Her name was <span
+		epub-type="stretchsummary">Nancy</span><span epub-type="stretchdetail">That was my mother's name.</span> Some stuff at the end</span>
+</p>
+<p>Most scientists accept <a epub-type="stretchsummary" href="#global-warming-details6">global warming</a>.</p>
+<aside id="global-warming-details6" epub-type="stretchdetail">
+	<p>More details on global warming. <a epub-type="stretchsummary" href="#evenmore6">More supporting evidence</a></p>
+	<ol id="evenmore6" epub-type="stretchdetail">
+		<li>Greater degrees of CO<sub>2</sub></li>
+		<li>Evidence of warming <span epub-type="stretchsummary">trend</span><span epub-type="stretchdetail"> It's the truth -- accept it!</span>.
+		</li>
+	</ol>
+</aside>
+<p>This is material at the bottom of the page that will get stretched down.</p>
+<h1>Using CSS Class</h1>
+<p>There once was a <span class="stretchsummary">girl</span><span class="stretchdetail"> Her name was <span
+		class="stretchsummary">Nancy</span><span class="stretchdetail">That was my mother's name.</span> Some stuff at the end</span>
+</p>
+<p>Most scientists accept <a href="#global-warming-details7" class="stretchsummary">global warming</a>.</p>
+<aside id="global-warming-details7" class="stretchdetail">
+	<p>More details on global warming. <a class="stretchsummary" href="#evenmore7">More supporting evidence</a></p>
+	<ol id="evenmore7" class="stretchdetail">
+		<li>Greater degrees of CO<sub>2</sub></li>
+		<li>Evidence of warming <span class="stretchsummary">trend</span><span class="stretchdetail"> It's the truth -- accept it!</span>.
+		</li>
+	</ol>
+</aside>
+<p>This is material at the bottom of the page that will get stretched down.</p>
+<h1>Using epub-type</h1>
+<p>There once was a <span epub-type="stretchsummary">girl</span><span epub-type="stretchdetail"> Her name was <span
+		epub-type="stretchsummary">Nancy</span><span epub-type="stretchdetail">That was my mother's name.</span> Some stuff at the end</span>
+</p>
+<p>Most scientists accept <a epub-type="stretchsummary" href="#global-warming-details8">global warming</a>.</p>
+<aside id="global-warming-details8" epub-type="stretchdetail">
+	<p>More details on global warming. <a epub-type="stretchsummary" href="#evenmore8">More supporting evidence</a></p>
+	<ol id="evenmore8" epub-type="stretchdetail">
+		<li>Greater degrees of CO<sub>2</sub></li>
+		<li>Evidence of warming <span epub-type="stretchsummary">trend</span><span epub-type="stretchdetail"> It's the truth -- accept it!</span>.
+		</li>
+	</ol>
+</aside>
+<p>This is material at the bottom of the page that will get stretched down.</p>
+<h1>Using CSS Class</h1>
+<p>There once was a <span class="stretchsummary">girl</span><span class="stretchdetail"> Her name was <span
+		class="stretchsummary">Nancy</span><span class="stretchdetail">That was my mother's name.</span> Some stuff at the end</span>
+</p>
+<p>Most scientists accept <a href="#global-warming-details9" class="stretchsummary">global warming</a>.</p>
+<aside id="global-warming-details9" class="stretchdetail">
+	<p>More details on global warming. <a class="stretchsummary" href="#evenmore9">More supporting evidence</a></p>
+	<ol id="evenmore9" class="stretchdetail">
+		<li>Greater degrees of CO<sub>2</sub></li>
+		<li>Evidence of warming <span class="stretchsummary">trend</span><span class="stretchdetail"> It's the truth -- accept it!</span>.
+		</li>
+	</ol>
+</aside>
+<p>This is material at the bottom of the page that will get stretched down.</p>
+</body>
 </html>
