--- a/test/stretch_test.html
+++ b/test/stretch_test.html
@@ -3,12 +3,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable=yes">
     <link type="text/css" rel="stylesheet" href="../src/stretchtext.css">
     <script type="module">
       import { initStretchText } from '../src/initStretchText.js';
       initStretchText();
     </script>
+    <title>Demo Title</title>
   </head>
   <body>
     <h1>Using epub-type</h1>
