add tags to make html validated

--- a/test/stretch_test.html
+++ b/test/stretch_test.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<title>StretchText Test</title>
-	<meta name="viewport" content="width=device-width">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, user-scalable=yes">
 	<link type="text/css" rel="stylesheet" href="../src/stretchtext.css">
 	<script type="module" src="../src/main.js"></script>
 </head>
