add unit tests for stretchtext

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>StretchText Test</title>
 	<meta name="viewport" content="width=device-width">
-	<link type="text/css" rel="stylesheet" href="../src/stretchtext.css">
-	<script type="module" src="../src/main.js"></script>
+	<link type="text/css" rel="stylesheet" href="stretchtext.css">
+	<script type="module" src="main.js"></script>
 </head>
 <body>
 <h1>Using epub-type</h1>
